save point uno-backend impl for cards in proto