@@ -2,12 +2,13 @@ package com.unogame.uno_backend.service;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Optional;
 import java.util.Random;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import com.unogame.uno_backend.model.Card;
 import com.unogame.uno_backend.model.GameSession;
 import com.unogame.uno_backend.model.Player;
 import com.unogame.uno_backend.repository.GameSessionRepository;
@@ -17,7 +18,7 @@ public class GameService {
 
     private final GameSessionRepository gameSessionRepository;
     private static final int MAX_PLAYERS = 4;
-    private static final String CHAR_POOL = "ABCDEFGHJKLMNPQRSTUVWXYZ23456789"; // exclude confusing chars
+    private static final String CHAR_POOL = "ABCDEFGHJKLMNPQRSTUVWXYZ23456789";
     private static final int GAME_ID_LENGTH = 5;
     private final Random random = new Random();
 
@@ -25,12 +26,10 @@ public class GameService {
         this.gameSessionRepository = gameSessionRepository;
     }
 
-    /** Generate a random 5-character alphanumeric code */
     private String generateGameCode() {
         StringBuilder sb = new StringBuilder();
         for (int i = 0; i < GAME_ID_LENGTH; i++) {
-            int idx = random.nextInt(CHAR_POOL.length());
-            sb.append(CHAR_POOL.charAt(idx));
+            sb.append(CHAR_POOL.charAt(random.nextInt(CHAR_POOL.length())));
         }
         return sb.toString();
     }
@@ -39,32 +38,24 @@ public class GameService {
     public String createGame(Player firstPlayer) {
         String gameId;
         int attempts = 0;
-
         do {
             gameId = generateGameCode();
             attempts++;
-            if (attempts > 10) {
-                throw new IllegalStateException("Unable to generate unique game ID after 10 attempts");
-            }
+            if (attempts > 10) throw new IllegalStateException("Cannot generate unique game ID");
         } while (gameSessionRepository.existsById(gameId));
 
-        GameSession gameSession = new GameSession(gameId);
-        gameSession.addPlayer(firstPlayer);
-        gameSessionRepository.save(gameSession);
-
+        GameSession game = new GameSession(gameId);
+        game.addPlayer(firstPlayer);
+        gameSessionRepository.save(game);
         return gameId;
     }
 
     @Transactional
     public JoinResponse joinPlayers(String gameId, List<Player> players) {
-        Optional<GameSession> optGame = gameSessionRepository.findById(gameId);
-        if (optGame.isEmpty()) {
-            throw new IllegalArgumentException("Game not found: " + gameId);
-        }
+        GameSession game = gameSessionRepository.findById(gameId)
+                .orElseThrow(() -> new IllegalArgumentException("Game not found: " + gameId));
 
-        GameSession game = optGame.get();
         List<PlayerInfo> newPlayers = new ArrayList<>();
-
         for (Player player : players) {
             if (!game.hasPlayer(player.getPlayerId()) && !game.isFull(MAX_PLAYERS)) {
                 game.addPlayer(player);
@@ -76,7 +67,7 @@ public class GameService {
 
         List<PlayerInfo> allPlayers = game.getPlayers().stream()
                 .map(p -> new PlayerInfo(p.getPlayerId(), p.getName()))
-                .toList();
+                .collect(Collectors.toList());
 
         return new JoinResponse(allPlayers, newPlayers);
     }
@@ -86,14 +77,21 @@ public class GameService {
         return gameSessionRepository.findById(gameId)
                 .map(g -> g.getPlayers().stream()
                         .map(p -> new PlayerInfo(p.getPlayerId(), p.getName()))
-                        .toList())
+                        .collect(Collectors.toList()))
                 .orElse(List.of());
     }
 
     @Transactional(readOnly = true)
-    public List<String> getCardsOnTable(String gameId) {
+    public List<Card> getPlayerHand(String gameId, String playerId) {
         return gameSessionRepository.findById(gameId)
-                .map(GameSession::getCardsOnTable)
+                .map(game -> game.getPlayerHand(playerId))
+                .orElse(List.of());
+    }
+
+    @Transactional(readOnly = true)
+    public List<Card> getCardsOnTable(String gameId) {
+        return gameSessionRepository.findById(gameId)
+                .map(GameSession::getCardsOnTable) 
                 .orElse(List.of());
     }
 
@@ -105,7 +103,7 @@ public class GameService {
     }
 
     @Transactional
-    public GameSession.PlayResult playCard(String gameId, String playerId, String card) {
+    public GameSession.PlayResult playCard(String gameId, String playerId, Card card) {
         GameSession game = gameSessionRepository.findById(gameId)
                 .orElseThrow(() -> new IllegalArgumentException("Game not found: " + gameId));
 
@@ -114,6 +112,7 @@ public class GameService {
         return result;
     }
 
+    // --- DTOs ---
     public record PlayerInfo(String id, String name) {}
     public record JoinResponse(List<PlayerInfo> allPlayers, List<PlayerInfo> newPlayers) {}
 }
